# parol-social

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release  GETTING-STARTED.md  IMPLEMENTATION_STATUS.md  README.md  ROADMAP.md  Relay-Federation.md  STARTUP-GUIDE.md  STRATEGIES.md  THREAT_MODEL.md  deploy.sh  docker-compose.yml  package.json
.cargo/: config.toml
.github/workflows/: ci.yml
crates/parolnet-clause/: Cargo.toml
crates/parolnet-clause/src/: lib.rs
crates/parolnet-cli/: Cargo.toml
crates/parolnet-cli/src/: main.rs  peer.rs
crates/parolnet-conformance/: Cargo.toml
crates/parolnet-conformance/src/: lib.rs
crates/parolnet-conformance/tests/: pnp_001_envelope_flow.rs  pnp_001_outer_frame.rs  pnp_001_wire.rs  pnp_002_handshake.rs  pnp_003_bootstrap.rs  pnp_004_relay_circuit.rs  pnp_005_gossip.rs  pnp_006_traffic_shaping.rs  pnp_007_media_file.rs  pnp_008_federation.rs  pnp_008_presence.rs  pnp_009_groups.rs  pnp_009_sender_key.rs
crates/parolnet-core/: Cargo.toml
crates/parolnet-core/src/: bootstrap.rs  call.rs  client.rs  config.rs  decoy.rs  envelope.rs  error.rs  ffi.rs  file_transfer.rs  fragmentation.rs  group_call.rs  group_file.rs  identity_rotation.rs  lib.rs  panic.rs  session.rs
crates/parolnet-core/tests/: core_tests.rs  group_integration.rs  integration_tests.rs
crates/parolnet-crypto/: Cargo.toml
crates/parolnet-crypto/src/: aead.rs  deniable.rs  double_ratchet.rs  error.rs  identity.rs  kdf.rs  lib.rs  wipe.rs  x3dh.rs
crates/parolnet-crypto/tests/: crypto_tests.rs
crates/parolnet-mesh/: Cargo.toml
crates/parolnet-mesh/src/: connection_pool.rs  discovery.rs  error.rs  federation.rs  gossip.rs  lib.rs  peer_manager.rs  peer_table.rs  store_forward.rs  sync.rs
crates/parolnet-mesh/tests/: mesh_tests.rs
crates/parolnet-protocol/: Cargo.toml
crates/parolnet-protocol/src/: address.rs  codec.rs  envelope.rs  ephemeral.rs  error.rs  gossip.rs  group.rs  handshake.rs  lib.rs  message.rs  padding.rs
crates/parolnet-protocol/tests/: protocol_tests.rs
crates/parolnet-relay/: Cargo.toml
crates/parolnet-relay-server/: Cargo.toml
crates/parolnet-relay-server/src/: authority_keys.rs  frames.rs  identity.rs  lib.rs  main.rs  rate_limit.rs  storage.rs  telemetry.rs  tracker.rs  ws_conn.rs
crates/parolnet-relay-server/tests/: identity_persistence.rs
crates/parolnet-relay/src/: authority.rs  bridge.rs  circuit.rs  directory.rs  error.rs  federation.rs  federation_codec.rs  federation_link.rs  federation_replay.rs  handshake.rs  health.rs  lib.rs  onion.rs  padding.rs  relay_node.rs  tokens.rs  trust_roots.rs
crates/parolnet-relay/src/bootstrap/: dht.rs  dns.rs  https.rs  mod.rs  seed.rs
crates/parolnet-relay/tests/: relay_tests.rs  tokens_persistence.rs
crates/parolnet-transport/: Cargo.toml
crates/parolnet-transport/src/: ble.rs  domain_front.rs  error.rs  lib.rs  noise.rs  obfs.rs  pluggable.rs  tls_camouflage.rs  tls_stream.rs  traits.rs  websocket.rs
crates/parolnet-transport/tests/: transport_tests.rs
crates/parolnet-wasm/: Cargo.toml
crates/parolnet-wasm/src/: bindings.rs  circuit.rs  lib.rs  storage.rs  websocket.rs
crates/parolnet-wasm/tests/: wasm_tests.rs
pwa/: .gitignore  app.js  build.mjs  build.sh  calculator.css  crypto-store.js  index.html  kill-sw.html  manifest-calculator.json  manifest.json  package-lock.json  package.json  qrcode.js  styles.css  sw.js  sw.source.js
pwa/lang/: ar.json  de.json  en.json  es.json  fa.json  fr.json  it.json  ja.json  ko.json  my.json  pt.json  ru.json  tr.json  vi.json  zh-CN.json  zh-TW.json
pwa/pkg/: parolnet_wasm.d.ts  parolnet_wasm.js  parolnet_wasm_bg.wasm  parolnet_wasm_bg.wasm.d.ts
pwa/src/: boot.js  call.js  connection.js  cover-traffic.js  db.js  i18n.js  live-relay-handler.js  messaging.js  peer-relay-cache.js  settings.js  state.js  token-pool.js  ui-chat.js  utils.js  webrtc.js
pwa/tests/: integration.test.mjs  unit.test.mjs
pwa/tests/e2e/: README.md  e2e.test.mjs
scripts/: reproducible-build.sh
server/: README.md  entrypoint.sh  index.html  install.html  nginx.conf  turnserver.conf
specs/: PNP-001-wire-protocol.md  PNP-002-handshake-protocol.md  PNP-003-bootstrap-protocol.md  PNP-004-relay-circuit.md  PNP-005-gossip-mesh.md  PNP-006-traffic-shaping.md  PNP-008-relay-federation.md  PNP-009-group-communication.md  SPEC-INDEX.md
specs/vectors/PNP-001/: bucket_boundaries.json
specs/vectors/PNP-008/: bridge_cover_page.json  bridge_disclosure_limits.json
tests/: pwa-debug.mjs  pwa-test.mjs
xtask/: Cargo.toml
xtask/src/: main.rs
