[package]
name = "parolnet-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Cryptographic primitives for ParolNet: X3DH, Double Ratchet, AEAD, deniable encryption"

[dependencies]
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
chacha20poly1305.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
sha2.workspace = true
hmac.workspace = true
rand.workspace = true
rand_core.workspace = true
zeroize.workspace = true
subtle.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
